@@ -148,7 +148,11 @@ void create_main_menu (GtkObject *window, GtkWidget *vbox)
 			  window, ID_VIEW_TOOLBAR_DRAWING, "menu_view_toolbar_drawing");
   create_check_menu_item (menu_in_menu, "Ani_mation", menu_in_menu_accel, GTK_SIGNAL_FUNC (OnCommand), 
 			  window, ID_VIEW_TOOLBAR_ANIMATION, "menu_view_toolbar_animation");
+  create_check_menu_item (menu_in_menu, "_Pieces", menu_in_menu_accel, GTK_SIGNAL_FUNC (OnCommand), 
+			  window, ID_VIEW_TOOLBAR_PIECES, "menu_view_toolbar_pieces");
   menu_separator (menu_in_menu);
+  create_check_menu_item (menu_in_menu, "_Floating Pieces", menu_in_menu_accel, GTK_SIGNAL_FUNC (OnCommand), 
+			  window, ID_VIEW_TOOLBAR_FLOATING, "menu_view_toolbar_floating");
   item = create_radio_menu_item (menu_in_menu, NULL, "Icons _and Text", menu_in_menu_accel,
 				 GTK_SIGNAL_FUNC (OnCommand), window,
 				 ID_VIEW_TOOLBAR_BOTH, "menu_view_toolbar_both");
